fixed overflow issues

--- a/css/tablet-style.css
+++ b/css/tablet-style.css
@@ -15,6 +15,7 @@
 #services-container {}
 
 #services {
+    overflow: hidden;
     flex-direction: column;
 
 }
